--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,11 @@
     		<groupId>jakarta.validation</groupId>
     		<artifactId>jakarta.validation-api</artifactId>
    		</dependency>
-		
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
