--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=TaskManagementSystem
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/task_management_system
+spring.datasource.username=postgres
+spring.datasource.password=edon
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
