--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=postgres
 spring.datasource.password=edon
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+jwt.secret=my-super-secure-key-1234567890!@#
+jwt.expiration=86400000
